# crux

./: .gitattributes  .gitignore  .stylish-haskell.yaml  .travis.yml  LICENSE  Main.hs  README.md  crux.cabal  crux.yaml  cruxjs.cabal  cxconfig.json  cxconfig.lua.yaml  cxconfig.yaml  pom.xml  run  sneak.cabal  stack.yaml  test.crux  test2.crux
Crux/: AST.hs  Error.hs  Gen.hs  HashTable.hs  IORef.hs  Intrinsic.hs  JSBackend.hs  JSGen.hs  JSTree.hs  Lex.hs  LuaBackend.hs  Main.hs  Module.hs  ModuleName.hs  MutableHashTable.hs  Parse.hs  Pos.hs  Prelude.hs  Project.hs  SymbolTable.hs  Text.hs  Tokens.hs  TrackIO.hs  TypeVar.hs  Typecheck.hs  Util.hs
Crux/Backend/: JS.hs
Crux/JSGen/: Types.hs
Crux/Module/: Types.hs
Crux/Typecheck/: Env.hs  Inst.hs  Instantiate.hs  Monad.hs  Occurs.hs  Quantify.hs  TypeAlloc.hs  Types.hs  Unify.hs
Sneak/: AST.hs  Gen.hs  Intrinsic.hs  JSTree.hs  Lex.hs  Main.hs  Module.hs  MutableHashTable.hs  Parse.hs  Prelude.hs  Text.hs  Tokens.hs  Typecheck.hs
Sneak/Backend/: JS.hs
Sneak/JSGen/: Types.hs
Sneak/Typecheck/: Types.hs  Unify.hs
closure-service/: Procfile  README.md  app.json  pom.xml
cruxjs/: .gitignore  README.md  cruxjs.cabal  stack.yaml
cruxjs/jsbits/: wrap.outro.js
cruxjs/npm/: .gitignore
cruxjs/npm/cruxlang/: cli.js  package.json
cruxjs/s/: build  sass-watcher  server
cruxjs/src/: Main.hs  compiler-worker.cx  crux.cx  playground.cx
cruxjs/stage/: index.html  style.scss
design/: ffi.md  letrec.md  modules.md  mutability.md  names.md  objects.md  option.md
doc/design/: angle-brackets.md  arrays.md  case.md  cli.md  exceptions.md  ffi.md  for-loops.md  hypotheses.md  language-references.md  language-usability-references.md  layout.md  methods.md  mutability.md  names.md  namespaces.md  npm-integration.md  objects.md  positioning.md  precedence.md  record-traits.md  records-with-optional-fields.md  records.md  row-polymorphism-unification.md  strings.md  style.md  sugar.md  traits.md  type-families.md  unification-table.md
doc/tutorial/: writing-npm-module.md
editor-support/atom/language-crux/: README.md  package.json
editor-support/atom/language-sneak/: README.md  package.json
editor-support/vscode/language-crux/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
examples/: exceptiontest.cx  json.cx  objects.cx
examples/json/: json.cx  main.cx
examples/node-server/: Main.sk  main.cx
examples/npmtest/: crux.yaml  node-test.js  test.sh
examples/npmtest/src/: lib.cx  main.cx
lib/: Json.cx  Prelude.cx  array.cx  assert.cx  boolean.cx  builtin.cx  callbackqueue.cx  cmp.cx  dict.cx  exception.cx  integer.cx  js.cx  json.cx  length.cx  literal.cx  mutarray.cx  number.cx  operator.cx  option.cx  pair.cx  path.cx  prelude.cx  random.cx  range.cx  repr.cx  result.cx  show.cx  string.cx  test.cx  tostring.cx  tuple.cx  void.cx
lib/common/: boolean.cx  builtin.cx  callbackqueue.cx  literal.cx  result.cx  string.cx  tuple.cx  types.cx
lib/dom/: webworker.cx  worker.cx  workerself.cx
lib/flux/: dispatcher.cx
lib/js/: dict.cx  js.cx  option.cx  repr.cx  unsafe.cx
lib/js/flux/: dispatcher.cx
lib/js/js/: unsafe.cx
lib/lua/: array.cx  mutarray.cx  operator.cx  print.cx  range.cx
lib/lua/js/: array.cx  unsafe.cx
lib/test/: quickcheck.cx
npm/cruxlang/: package.json
rts/: rts.js  rts.lua
s/: build  build-all  crux.inc  lint  run-all  test
src/: Main.hs  compiler-worker.cx  crux.cx  hlint.hs  playground.cx
src/crux/: Main.hs
src/main/java/: Main.java
src/sneak/: Main.hs
src/tests/: GenTest.hs  IntegrationTest.hs  JSBackendTest.hs  JSGenTest.hs  ParseTest.hs  TestJesus.hs  Tests.hs
stage/: index.html  playground.js
template/: crux.yaml.template
test-data/: array.cx  array.sk  enum.cx  escapes.cx  export.cx  fib.cx  fib.sk  for-loop.cx  mutable_let.cx  mutable_record.cx  mutable_record_parameter.cx  mutable_record_parameter.sk  parameterized_type_alias.cx  records.cx  records2.cx  return-in-if.cx  tdnr.cx  test.cx  test10.cx  test11.cx  test12.cx  test13.cx  test13.sk  test14.cx  test15.cx  test2.cx  test3.cx  test6.cx  test6.sk  test7.cx  test8.cx  test9.cx  to_option_string.cx  unsafecoerce.cx
test-data/issue-51/: A.cx  B.cx
test-data/module-qualified/: main.sk
test-data/xhr/: Http.cx  index.html  main.cx
test_data/: enum.crux  enum.sk  enum2.sk  export.crux  export.sk  mutable_let.crux  mutable_let.sk  mutable_record.sk  mutable_record_parameter.crux  parameterized_type_alias.crux  parameterized_type_alias.sk  rawjs.crux  records.sk  records2.crux  return-in-if.crux  return-in-if.sk  test.crux  test10.crux  test10.sk  test11.crux  test11.sk  test12.crux  test12.sk  test13.crux  test14.crux  test14.sk  test2.sk  test3.crux  test3.sk  test4.crux  test5.crux  test6.crux  test6.sk  test7.sk  test8.crux  test8.sk  test9.crux  test9.sk  to_option_string.sk  tostring.sk  (+1 more)
test_data/module-qualified/: T.crux  main.sk
test_data/module-unqualified/: T.crux  main.crux  main.sk
test_data/xhr/: main.crux  main.sk
tests/: GenTest.hs  IntegrationTest.hs  IntegrationTestMain.hs  JSBackendTest.hs  ModuleTest.hs  ParseTest.hs  Tests.hs  TypecheckTest.hs  UnifyTest.hs  UnitTestMain.hs
tests/crux/: arraytest.cx  booltest.cx  callbackqueuetest.cx  callbacksettest.cx  cmptest.cx  dicttest.cx  integertest.cx  jsontest.cx  jstest.cx  main.cx  numbertest.cx  optiontest.cx  pathtest.cx  rangetest.cx  reprtest.cx  showtest.cx  stringtest.cx  tostringtest.cx
tests/crux/flux/: dispatchertest.cx
tests/crux/js/: optiontest.cx
tests/crux/test/: quickchecktest.cx
tests/integration/alias-data-cycle/: main.cx
tests/integration/arg-pattern/: main.cx  stdout.txt
tests/integration/arg-wildcard/: main.cx  stdout.txt
tests/integration/arithmetic/: main.cx
tests/integration/array-alias/: main.cx  stdout.txt
web-playground/: .gitignore  README.md  stack.yaml  web-playground.cabal
web-playground/app/: Main.hs
web-playground/s/: build
web-playground/src/: Eval.hs  Lib.hs  Main.hs
web-playground/stage/: index.html  playground.js  style.css  style.scss
(+276 files in other folders)
