name:                crux
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
author:              Andy Friesen, Chad Austin
maintainer:          andy.friesen@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
    exposed-modules: Crux.AST
                   , Crux.Error
                   , Crux.Gen
                   , Crux.Intrinsic
                   , Crux.JSBackend
                   , Crux.JSGen.Types
                   , Crux.JSTree
                   , Crux.Lex
                   , Crux.Main
                   , Crux.Module
                   , Crux.MutableHashTable
                   , Crux.Parse
                   , Crux.Prelude
                   , Crux.Text
                   , Crux.Tokens
                   , Crux.Typecheck
                   , Crux.Typecheck.Types
                   , Crux.Typecheck.Unify
                   , Crux.Typecheck.Env

    build-depends: base >=4.7
                 , parsec ==3.1.9
                 , text
                 , bytestring
                 , containers
                 , either
                 , mtl
                 , aeson
                 , directory
                 , transformers
                 , data-default
                 , hashable
                 , unordered-containers
                 , pretty-show
                 , filepath
                 , raw-strings-qq
                 , optparse-applicative

    default-extensions: OverloadedStrings
                      , MultiWayIf
                      , LambdaCase
                      , RecordWildCards
                      , NamedFieldPuns

    ghc-options: -Wall
    -- ghc-options: -Werror
    default-language: Haskell2010

executable crux
    main-is:           Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: base, crux

    hs-source-dirs: src/crux
    default-language:    Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Tests.hs
    ghc-options: -Wall -Werror -fno-warn-missing-signatures
    hs-source-dirs: tests
    build-depends: base
                 , HTF
                 , parsec
                 , text
                 , crux
                 , process
                 , filepath
                 , temporary
                 , unordered-containers
                 , raw-strings-qq
    default-language: Haskell2010
