name:                crux
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
author:              Andy Friesen, Chad Austin
maintainer:          andy.friesen@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
    exposed-modules: Crux.AST
                   , Crux.Error
                   , Crux.Gen
                   , Crux.Intrinsic
                   , Crux.IORef
                   , Crux.JSBackend
                   , Crux.JSGen.Types
                   , Crux.JSTree
                   , Crux.Lex
                   , Crux.Main
                   , Crux.Module
                   , Crux.Module.Types
                   , Crux.MutableHashTable
                   , Crux.Parse
                   , Crux.Prelude
                   , Crux.Text
                   , Crux.Tokens
                   , Crux.Typecheck
                   , Crux.Typecheck.Monad
                   , Crux.Typecheck.Types
                   , Crux.Typecheck.Unify
                   , Crux.Typecheck.Env
                   , Crux.TypeVar
                   , Crux.Util

    build-depends: base >=4.7
                 , parsec ==3.1.9
                 , text
                 , bytestring
                 , containers
                 , either
                 , mtl
                 , aeson
                 , directory
                 , transformers
                 , data-default
                 , hashable
                 , unordered-containers
                 , pretty-show
                 , filepath
                 , raw-strings-qq
                 , optparse-applicative

    default-extensions: OverloadedStrings
                      , MultiWayIf
                      , LambdaCase
                      , RecordWildCards
                      , NamedFieldPuns

    ghc-options: -Wall
    -- ghc-options: -Werror
    default-language: Haskell2010

executable crux
    main-is:           Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: base, crux

    hs-source-dirs: src/crux
    default-language:    Haskell2010

test-suite unit
    type: exitcode-stdio-1.0
    main-is: UnitTestMain.hs
    hs-source-dirs: tests
    other-modules:
        GenTest
        JSBackendTest
        ParseTest
        UnifyTest
    ghc-options: -Wall -Werror -fno-warn-missing-signatures
    build-depends: base
                 , HTF
                 , parsec
                 , text
                 , crux
                 , temporary
                 , unordered-containers
                 , raw-strings-qq
    default-language: Haskell2010

test-suite integration
    type: exitcode-stdio-1.0
    main-is: IntegrationTestMain.hs
    hs-source-dirs: tests
    ghc-options: -Wall -Werror -fno-warn-missing-signatures
    build-depends: base
                 , HTF
                 , text
                 , crux
                 , process
                 , filepath
                 , directory
                 , pathwalk
                 , temporary
                 , unordered-containers
                 , raw-strings-qq
    default-language: Haskell2010
