name:                crux
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
author:              Andy Friesen, Chad Austin
maintainer:          andy.friesen@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
    exposed-modules: Crux.AST
                   , Crux.Error
                   , Crux.Gen
                   , Crux.HashTable
                   , Crux.IORef
                   , Crux.JSBackend
                   , Crux.JSTree
                   , Crux.Lex
                   , Crux.Main
                   , Crux.Module
                   , Crux.Module.Types
                   , Crux.ModuleName
                   , Crux.Parse
                   , Crux.Prelude
                   , Crux.Project
                   , Crux.Pos
                   , Crux.SymbolTable
                   , Crux.Text
                   , Crux.Tokens
                   , Crux.TrackIO
                   , Crux.Typecheck
                   , Crux.Typecheck.Inst
                   , Crux.Typecheck.Monad
                   , Crux.Typecheck.Occurs
                   , Crux.Typecheck.Quantify
                   , Crux.Typecheck.TypeAlloc
                   , Crux.Typecheck.Types
                   , Crux.Typecheck.Unify
                   , Crux.Typecheck.Env
                   , Crux.TypeVar
                   , Crux.Util

    build-depends: base >=4.7
                 , parsec >=3.1.9
                 , text
                 , bytestring
                 , containers
                 , either
                 , mtl
                 , aeson
                 , directory
                 , transformers
                 , data-default
                 , hashable
                 , unordered-containers
                 , pretty-show
                 , filepath
                 , raw-strings-qq
                 , optparse-applicative
                 , yaml
                 , process
                 , ansi-terminal
                 , fsnotify
                 , stm
                 , hastache

    default-extensions: OverloadedStrings
                      , MultiWayIf
                      , LambdaCase
                      , RecordWildCards
                      , NamedFieldPuns
                      , GeneralizedNewtypeDeriving

    ghc-options: -Wall
    -- ghc-options: -Werror
    default-language: Haskell2010

executable crux
    main-is:           Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: base, crux

    hs-source-dirs: src/crux
    default-language:    Haskell2010

test-suite unit
    type: exitcode-stdio-1.0
    main-is: UnitTestMain.hs
    hs-source-dirs: tests
    other-modules:
        GenTest
        JSBackendTest
        ParseTest
        TypecheckTest
        UnifyTest
    ghc-options: -Wall -Werror -fno-warn-missing-signatures
    build-depends: base
                 , HTF
                 , parsec
                 , text
                 , crux
                 , temporary
                 , unordered-containers
                 , raw-strings-qq
    default-language: Haskell2010

test-suite integration
    type: exitcode-stdio-1.0
    main-is: IntegrationTestMain.hs
    hs-source-dirs: tests

    other-modules: IntegrationTest

    default-extensions: OverloadedStrings
                      , MultiWayIf
                      , LambdaCase
                      , RecordWildCards
                      , NamedFieldPuns

    ghc-options: -Wall -Werror -O2 -fno-warn-missing-signatures -threaded -with-rtsopts=-N
    -- -eventlog "-with-rtsopts=-N -H32m"
    build-depends: base
                 , HTF
                 , text
                 , crux
                 , process
                 , filepath
                 , directory
                 , pathwalk
                 , temporary
                 , unordered-containers
                 , raw-strings-qq
                 , async
                 , yaml
                 , stm
                 , stm-chans
    default-language: Haskell2010
