name:                cruxjs
version:             0.1.0.0
synopsis:            JavaScript bindings for the Crux compiler
description:         Please see README.md
homepage:            http://github.com/cruxlang/crux/web-playground
license:             BSD3
license-file:        LICENSE
author:              Andy Friesen
maintainer:          andy.friesen@gmail.com
copyright:           (c) 2016 Andy Friesen
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable crux-js-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghcjs-options: -Wall
  build-depends:       base
                     , ghcjs-base
                     , crux
                     , bytestring
                     , text
                     , file-embed
                     , unordered-containers
  default-language:    Haskell2010
