name:                web-playground
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/andyfriesen/crux/web-playground
license:             BSD3
license-file:        LICENSE
author:              Andy Friesen
maintainer:          andy.friesen@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
extra-source-files:  ../lib/Prelude.cx

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Eval
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
                     , ghcjs-dom
                     , crux
                     , mtl
                     , file-embed
                     , text
                     , unordered-containers
  default-language:    Haskell2010
  ghc-options: -Wall

executable web-playground-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  --ghc-options:         
  build-depends:       base
                     , web-playground
  default-language:    Haskell2010
